objects/SMAX_PS_Inventory_Event__e.object
<CustomObject>
    <description>A Platform Event indicating that an Inventory Integration Event has occurred.</description>
    <label>Inventory Event</label>
    <pluralLabel>Inventory Events</pluralLabel>
    <fields>
        <fullName>SMAX_PS_Action__c</fullName>
        <label>Action</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CountDocumentId__c</fullName>
        <label>Count Document Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StockTransferId__c</fullName>
        <label>Stock Transfer Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>